<resources>
    <string name="app_name">FirebaseApplication</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="raleway_bold">Raleway-Bold.ttf</string>
    <string name="raleway_light">Raleway-Light.ttf</string>
    <string name="raleway_medium">Raleway-Medium.ttf</string>
    <string name="raleway_semi_bold">Raleway-SemiBold.ttf</string>
    <string name="raleway_thin">Raleway-Thin.ttf</string>
    <string name="avenir_black">GOTHICB.ttf</string>
    <string name="avenir_book">GOTHICB.ttf</string>
    <string name="avenir_medium">CenturyGothic.ttf</string>
    <string name="CenturyGothic">CenturyGothic.ttf</string>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="error_retrieving_access_token">Error retrieving token</string>
    <string name="event_message_from_service">Event</string>
    <string name="event_admin_dash_week">AdminDashboardWeek</string>
    <string name="event_admin_dash_month">AdminDashboardMonth</string>
    <string name="event_admin_dash_year">AdminDashboardYear</string>
    <string name="event_message_srch_pacfyr">Event Pacifyr Search</string>
    <string name="event_customer_dashboard">Event customer Dashboard</string>
    <string name="event_user_profile">User profile</string>
    <string name="rupee">₹</string>
    <string name="dollar">$</string>
    <string name="get_sessions_date_range">Get sessions date range</string>
    <string name="earnings_api">Earnings API</string>
    <string name="get_all_pacifyr_sessions">Get all Beeone sessions</string>
    <string name="get_saved_cards">Get saved cards</string>
    <string name="get_session_details">Get session details</string>
    <string name="get_session_rating">Get session rating</string>
    <string name="list_negative_emotions">List neagative emotions</string>
    <string name="list_positive_emotions">List positive emotions</string>
    <string name="pacifyr_dashboard">Beeone Dashboard</string>
    <string name="list_emotions">List emotions</string>
    <string name="list_all_employees">List all employees</string>
    <string name="edit_profile_request">Edit profile request</string>
    <string name="edit_profile_response">Edit profile response</string>
    <string name="post_rate_customer_session">Post rate customer session</string>
    <string name="post_rate_pacifyr">Rate Beeone</string>
    <string name="post_rate_pacifyr_session">Rate Beeone session</string>
    <string name="search_pacifyr_with_option_response">Search Beeone with option response</string>
    <string name="search_pacifyr_with_option_request">Search Beeone with option request</string>
    <string name="post_registration">Post registration</string>
    <string name="stop_session_with_pacifyr">Stop Session With Beeone</string>
    <string name="resp_start_session_with_pacifyr">Response Start Session With Beeone</string>
    <string name="resp_set_session_as_connected">Set session as connected</string>
    <string name="start_session_with_pacifyr">Start Session With Beeone</string>
    <string name="facebook_app_id">180931982441982</string>
    <string name="fb_login_protocol_scheme">fb180931982441982</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="snapshot">Snapshot</string>
    <string name="login_fb">Login via Facebook</string>
    <string name="log_out">LogOut</string>
    <string name="prompt_name">Name</string>
    <string name="year_of_birth">Year of Birth</string>
    <string name="prompt_collage">Enter your collage/university</string>
    <string name="prompt_amont">Enter Amount</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_phone">Phone number</string>
    <string name="signup_fb">Sign up via Facebook</string>
    <string name="e_phonenumber">Enter your phone number </string>
    <string name="e_con_code">Enter confirmation code</string>
    <string name="phone">Phone number</string>
    <string name="comments">Add a comment.</string>
    <string name="otp_hint">Please enter the verification code that was sent to </string>
    <string name="verify_phone">Verify phone number</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="read_understand">I have read, understand, and agree to be bound by the</string>
    <string name="agree_terms_alert">You need to agree to Terms of use before signing up</string>
    <string name="term_of_use">Pacifyr Terms of Use</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="send_confirmcode">Send Confirmation code </string>
    <string name="didnt_get_code">Did not receive a code? Resend </string>
    <string name="how_you_rate">How do you rate your Pacifyr / Therapist?</string>
    <string name="find_helping_pacifyr">Find a Beeone who can help you</string>
    <string name="specify_emotion">Specify your emotion</string>
    <string name="talk_to_pacifyr">Talk to your Beeone using chat,audio or video</string>
    <string name="skip">Skip</string>
    <string name="type_text">Type text message</string>
    <string name="per_hour"> per hour</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="session_expired">Session expired</string>
    <string name="this_week">THIS WEEK</string>
    <string name="pref_pacifyrs">PREFFERED Beeone</string>
    <string name="my_last_session">MY LAST SESSION</string>
    <string name="how_you_feel">HOW ARE YOU FEELING?</string>
    <string name="my_last_emotion">MY LAST EMOTION</string>
    <string name="how_you_feel_now">How are you feeling now?</string>
    <string name="sessions">SESSIONS</string>
    <string name="last_session">LAST SESSION</string>
    <string name="hours">HOURS</string>
    <string name="minutes">MINUTES</string>
    <string name="hrs">HRS</string>
    <string name="mns">MNS</string>
    <string name="session_summary">SESSION SUMMARY</string>
    <string name="available_min">AVAILABLE MIN</string>
    <string name="paid">PAID</string>
    <string name="earnings">EARNINGS</string>
    <string name="earned">EARNED</string>
    <string name="starts">5 stars</string>
    <string name="customers">CUSTOMERS</string>
    <string name="today">TODAY</string>
    <string name="current_rating">CURRENT RATING</string>
    <string name="upcoming_session">UPCOMING SESSION</string>
    <string name="sms_text_login">Beeone will send you an SMS message to confirm your phone number</string>
</resources>