<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/actionbar_white"
        android:id="@+id/include"
        android:layout_height="50dp"
        android:layout_width="match_parent">
    </include>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/signup_view"/>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    xmlns:tools="http://schemas.android.com/tools"  android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">



    <android.support.percent.PercentRelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout

            android:id="@+id/logo_rlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:layout_marginTopPercent="5%">

            <ImageView
                android:layout_width="200dp"
                android:src="@drawable/logoipad2"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/logo_blue"/>


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/hint_llay"
            android:layout_below="@+id/logo_rlay"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:layout_marginTopPercent="10%"
            android:orientation="vertical"
            android:gravity="center"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.ceino.utilitylibrary.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/black_pacifyr"
                android:text="@string/e_con_code"/>

            <com.ceino.utilitylibrary.CustomFontTextView

                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="@dimen/sp15"
                android:id="@+id/otp_phone_tv"
                android:text="@string/otp_hint"
                android:textColor="@color/light_grey2_pacifyr"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/hint_llay"
            android:id="@+id/create_llay"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            app:layout_marginBottomPercent="5%"
            android:layout_height="wrap_content">


            <com.ceino.utilitylibrary.CustomEditText
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="@dimen/sp17"
                android:visibility="gone"
                android:inputType="number"
                android:id="@+id/otp_edtit_text"
                android:layout_height="wrap_content" />

            <com.goodiebag.pinview.Pinview
                android:id="@+id/pinview"
                app:pinBackground="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:pinWidth="20dp"
                app:pinHeight="30dp"
                app:pinLength="6"
                app:cursorVisible="false"
                app:forceKeyboard="false"
                app:hint="*"
                app:inputType="number"
                app:password="false"/>


            <RelativeLayout
                android:layout_gravity="center"
                android:id="@+id/createaccount_rlay"
                android:layout_width="335dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_border_lightblue"
                android:padding="10dp">

                <com.ceino.utilitylibrary.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/c_account_ctxv"
                    android:textSize="20sp"
                    android:textColor="@color/white" />


            </RelativeLayout>

            <com.ceino.utilitylibrary.CustomFontTextView
                android:layout_width="wrap_content"
                android:textSize="@dimen/sp13"
                android:layout_alignParentBottom="true"
                android:id="@+id/resend_ctxv"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/didnt_get_code"
                android:textColor="#3063f9"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp" />

        </LinearLayout>

    </android.support.percent.PercentRelativeLayout>
</ScrollView>
</LinearLayout>